CHANGES IN VERSION 1.28.1
-------------------------

BUG FIXES

    o `seqRecompress(, verbose=FALSE)` works correctly


CHANGES IN VERSION 1.28.0
-------------------------

NEW FEATURES

    o new functions `seqUnitSlidingWindows()`, `seqUnitApply()`,
      `seqUnitFilterCond()`

    o new variable "$variant_index", "$sample_index" in `SeqGetData()`,
      `seqBlockApply()` and `seqUnitApply()` to get the indices of selected
      variants

    o new arguments '.padNA' and '.envir' in `seqGetData()`

    o new functions `seqSetFilterAnnotID()` and `seqGDS2BED()`

    o multicore function in `seqBED2GDS(, parallel=)`

    o new package-wide option `options(seqarray.nofork=TRUE)` to disable forking

    o new option 'minor' in `seqAlleleFreq()` and `seqAlleleCount()`

    o new option 'verbose' in `seqMissing()`, `seqAlleleFreq()` and
      `seqAlleleCount()`; '.progress' is deprecated, but still can be used
      for compatiblity

    o `seqAlleleFreq()`, `seqAlleleCount()`, `seqMissing()`,
      `seqSetFilterCond()` work on 'annotation/format/DS', if 'genotype/data'
      is not available

UTILITIES

    o `seqAddValue()` adds vectors, matrices and data frame to "annotation/info"

    o `seqBED2GDS()` allows a single file name without the extended file names
      (.bed, .fam, .bim)

    o allele flip in `seqBED2GDS()` to allow major allele to be reference

    o rewrite `seqGetData()` for faster loading

    o significantly improve `seqBlockApply()` on 'annotation/info/VARIABLE'
      (https://github.com/zhengxwen/SeqArray/issues/59)

    o add a S3 method `print.SeqVCFHeaderClass()` for `seqVCF_Header()`

    o new option '.tolist' in `seqGetData()`, `seqBlockApply()` and
      `seqUnitApply()`

    o String "." in a VCF file are converted to a blank string (missing value)
      in `seqVCF2GDS()`

    o add a class name 'SeqVarDataList' to the returned 'list(length, data)'
      from `seqGetData()`

    o new option `seqMissing(, per.variant=NA)`
